grpc service for questions, get question api, hook up monolith with gateway
