# questions/internal/rest/api.swagger.json
@@ -48,6 +48,37 @@
           "Question"
         ]
       }
+    },
+    "/api/questions/{id}": {
+      "get": {
+        "summary": "Get a question by id",
+        "operationId": "getQuestion",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/questionspbGetQuestionResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Question"
+        ]
+      }
     }
   },
   "definitions": {
@@ -69,6 +100,25 @@
       }
     },
     "questionspbCreateQuestionResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "body": {
+          "type": "string"
+        }
+      }
+    },
+    "questionspbGetQuestionResponse": {
+      "type": "object",
+      "properties": {
+        "question": {
+          "$ref": "#/definitions/questionspbQuestion"
+        }
+      }
+    },
+    "questionspbQuestion": {
       "type": "object",
       "properties": {
         "id": {
